2009-03-08  H.J. Lu  <hongjiu.lu@intel.com>

	PR c++/39060
	* g++.dg/other/new1.C: Adjusted.
	* g++.dg/parse/crash40.C: Likewise.
	* g++.dg/parse/defarg12.C: Likewise.
	* g++.dg/template/error15.C: Likewise.

	* g++.dg/other/pr39060.C: New.

2009-03-07  Jason Merrill  <jason@redhat.com>

	PR c++/39367
	* g++.dg/opt/new1.C: New.

2009-03-06  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/33492
	* g++.dg/other/error32.C: New.

2009-03-06  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/39360
	* gcc.c-torture/compile/pr39360.c: New test.

	PR debug/39372
	* g++.dg/debug/dwarf2/static-local-var-in-ctor.C: New test.

2009-03-05  Jason Merrill  <jason@redhat.com>

	PR c++/38908
	* g++.dg/warn/Wuninitialized-3.C: New test.

2009-03-05  Jakub Jelinek  <jakub@redhat.com>

	PR debug/39379
	* g++.dg/debug/dwarf2/imported-module-3.C: New test.
	* g++.dg/debug/dwarf2/imported-module-4.C: New test.

2009-03-04  Jason Merrill  <jason@redhat.com>

	PR c++/13549
	* g++.dg/template/koenig7.C: New test.

2009-03-04  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.dg/torture/predcom-1.C: New test.

2009-03-04  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/39362
	* g++.dg/torture/pr39362.C: New testcase.

2009-03-04  Jason Merrill  <jason@redhat.com>
	    Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	PR c++/9634
	PR c++/29469
	PR c++/29607
	* g++.dg/template/dependent-name5.C: New test.

2009-03-04  Steve Ellcey  <sje@cup.hp.com>

	PR testsuite/39357
	* gcc.dg/vect-iv-6.c (dg-require-effective-target): Change from
	vect_int to vect_int_mult.

2009-03-04  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/39358
	* g++.dg/warn/Wstrict-aliasing-bogus-escape-2.C: New testcase.
	* g++.dg/warn/Wstrict-aliasing-bogus-escape-3.C: Likewise.

2009-03-04  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/39339
	* gcc.c-torture/execute/pr39339.c: New testcase.

2009-03-03  Joseph Myers  <joseph@codesourcery.com>

	* gcc.c-torture/compile/20090303-1.c,